[package]
name = "shared_stream"
version = "0.1.0"
authors = ["marieell <marieell@tuta.io>"]
edition = "2018"
categories = ["asynchronous"]
license = "AGPL-3.0+"
repository = "https://github.com/marieell/shared-stream"
description = "A crate for easily cloneable streams"
readme = "README.md"
keywords = ["async", "stream", "streams", "shared"]

[dependencies]
futures-core = { version = "^0.3", default-features = false }
pin-project-lite = "^0.2"

[dev-dependencies]
futures = { version = "^0.3", default-features = false, features = [ "executor" ] }
